--- a/mushroom-tuned.ipynb
+++ b/mushroom-tuned.ipynb
@@ -1916,6 +1916,16 @@
    "source": [
     "classifier_tryout(model, X_train, y_train, X_test, y_test, 'Tuned Random Forest Model')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0c16891",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value = 1\n"
+   ]
   }
  ],
  "metadata": {
